
2006-09-06 (REL_1_0_2) Christian Walter <wolti@sil.at>:
 Notes: Fixed bug in FreeRTOS porting layer for STR71X/lwIP target where
   memory is not freed in the sys_arch_thread_remove function. 
   Synched MCF5235TCP port with the FreeRTOS/lwIP port for the STR71X.

 Detailed notes:
   - BUG (STR71XTCP): Sys_arch_thread_remove did not free the memory from
       the TCB.
   - BUG (STR71XTCP): Unnecessary call to vTaskSuspendAll removed.
   - BUG (STR71XTCP): Bug with counting variable. The first to lwIP tasks
       got the same name (lwIP0).
   - FEATURE (MCF5235TCP): Enhanced functions from the STR71X/lwIP port
       merged into the Coldfire port.

2006-09-04 (REL_1_0_1) Christian Walter <wolti@sil.at>:
 Notes: Fixed bug in serial driver for STR71x target when the ring buffer
   overflows. 

 Detailed notes:
   - BUG (STR71XTCP): Under high load the ring buffer in the serial driver
       functions might overflow. There was an error with counting the number
       of received characters which corrupted received frames.
       Now receiver correctly recovers in case of dropped bytes.

2006-09-04 (REL_1_0) Christian Walter <wolti@sil.at>:
 Notes: Added support for ATmega8, ATmega16, ATmega32, ATmega169 and 
   RS485 drivers in the AVR support. Special thanks to Tran Minh Hoang 
   for his contribution.
   Added a new lwIP port for the STR71X target which uses one serial 
   interface for a PPP connection. This can be used for remote Modbus/TCP
   devices in combination with a Modem (E.g.  GPRS or Analog).

 Detailed notes:
   - FEATURES (AVR): Integrated patches from Tran Minh Hoang to support the
       ATmega8, ATmega16, ATmega32, ATmega169 controllers.
   - FEATURES (AVR): Added support for RS485 drivers in the AVR code. The 
       example supports the DS76176.
   - FEATURES (STR71XTCP): implemented function in STR71X/lwIP porting layer
       to remove running tasks.
   - FEATURES (STR71XTCP): added new thread creation function in STR71X/lwIP