@@ -1,4 +1,13 @@
 
+2006-09-XX (REL_1_0_3) Christian Walter <wolti@sil.at>:
+ Notes: Added new functions to support registering of custom callback
+   handlers. This makes it possible to implement new Modbus function
+   codes without touching the protocol stack.
+
+ Detailed notes:
+   - FEATURE (ALL): Added support for registering new functions handlers
+      with eMBRegisterCB.
+
 2006-09-06 (REL_1_0_2) Christian Walter <wolti@sil.at>:
  Notes: Fixed bug in FreeRTOS porting layer for STR71X/lwIP target where
    memory is not freed in the sys_arch_thread_remove function. 
